WIP: Model `modernizer-maven-plugin`